# Bookclub

./: .gitconfig  Charts.hs  CsvDatabase.hs  CsvParser.hs  Csvstuff.hs  README.md  site.cabal  site.hs  stack.yaml  test.hs
_site/css/: print.css  style.css
_site/pages/: chooserChart.html  iainChart.html  iainTable.html  index.html  jethroChart.html  jethroTable.html  math.html  meannessChart.html  meanness_chart.html  neilChart.html  neilTable.html  picker_charts.html  scoreChart.html  scoreTable.html  score_chart.html  score_table.html  stretch.html  stretchChart.html  stretchTable.html  strings.html  stringsChart.html  stringsTable.html
_site/xml/: IAINChart.xml  JETHROChart.xml  NEILChart.xml  (+5 more)
app/: site.hs
charts/: AC_RunActiveContent.js  sample.html  sample.xml
css/: default.css  print.css  style.css
csv/: scoreTable.csv
old/: meanness.xml  scoreChart.csv
pages/: IAINChart.html  JETHROChart.html  NEILChart.html  STRETCHChart.html  STRINGSChart.html  chooserChart.html  funcs.php  hit_parade.html  iainChart.html  iainTable.html  index.markdown  index.md  jethroChart.html  jethroTable.html  math.md  meannessChart.html  meanness_chart.html  neilChart.html  neilTable.html  picker_charts.html  robinsChart2.html  robinsChart3.html  robots.txt  scoreChart.html  scoreTable.html  score_chart.html  sitemap.xml  spreadsheet.md  stretch.html  stretchChart.html  stretchTable.html  strings.html  stringsChart.html  stringsTable.html
src/: Charts.hs  test.hs
templates/: chart.html  chart.xml  chart2.html  chart3.html  default.html  hitParade.html  match.html
(+195 files in other folders)
