name:                site
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Charts
  build-depends:       base >= 4.7 && < 5
                     , CsvDatabase
                     , containers
                     , filepath
                     , hakyll
                     , parsec
  default-language:    Haskell2010

executable site-exe
  hs-source-dirs:      app
  main-is:             site.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , MissingH
                     , HDBC
                     , HDBC-sqlite3
                     , containers
                     , parsec
                     , filepath
                     , CsvDatabase
                     , pandoc
                     , ftphs
                     , transformers
                     , site
                     , hakyll
  default-language:    Haskell2010
